Improve light-dark colors

--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
 
                 <h3>Code Blocks</h3>
                 <p>
-                    For displaying code, we use the &lt;pre&gt; and &lt;code&gt;
-                    tags. CSS can style these to make the code more readable.
+                    For displaying code, we use the <code>&lt;pre&gt;</code> and
+                    <code>&lt;code&gt;</code> tags. CSS can style these to make
+                    the code more readable.
                 </p>
                 <pre><code>
 /* Example CSS Code */
@@ -261,8 +262,8 @@ body {
                     ></textarea>
 
                     <p>
-                        <button type="submit">Submit Form</button>
-                        <button type="reset">Reset Form</button>
+                        <button type="submit">Submit form</button>
+                        <button type="reset">Reset form</button>
                     </p>
                 </form>
             </section>
